Fixed IE filter issue for menu items. Had to override filter being applied to ui-state-default. Also added top margin to h3 for better vertical alignment.

--- a/css/custom-theme/jquery-ui-1.8.16.custom.css
+++ b/css/custom-theme/jquery-ui-1.8.16.custom.css
@@ -1172,6 +1172,7 @@ div.wijmo-wijmenu{
 .wijmo-wijmenu .ui-state-default{
   box-shadow: none;
   color:#BFBFBF;
+  filter: none;
 }
 
 .wijmo-wijmenu .ui-state-default .wijmo-wijmenu-text{    
@@ -1201,6 +1202,7 @@ div.wijmo-wijmenu .ui-widget-header h3{
   font-weight: 200;
   line-height: 1;
   margin-left: -20px;
+  margin-top:2px;
   padding: 8px 20px 12px;
 }
 
